hphp/test/slow/class_type_constant/recursion_type_structure_classname_via_type_alias.php.expectf
Fatal error: resolving type alias T failed. Have you declared all classes in the type alias in %s/recursion_type_structure_classname_via_type_alias.php on line 11
